--- a/Software/CANController/MainWindow.xaml
+++ b/Software/CANController/MainWindow.xaml
@@ -5,16 +5,59 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CANController"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="720" Width="1280">
+    <Window.Resources>
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="Margin" Value="15"/>
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style x:Key="BorderStyle" TargetType="Border">
+            <Setter Property="CornerRadius" Value="60,60,60,60"/>
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="Opacity" Value="0.85"/>
+            <Setter Property="Background" Value="White"/>
+        </Style>
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="White"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="LightSkyBlue"/>
+        <SolidColorBrush x:Key="Button.Pressed.Border" Color="LightSkyBlue"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+        <ControlTemplate x:Key="CarButtonTemplate" TargetType="{x:Type ButtonBase}">
+            <Border x:Name="border" CornerRadius="100" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true">
+                <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="Button.IsDefaulted" Value="true">
+                    <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background}"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border}"/>
+                </Trigger>
+                <Trigger Property="IsPressed" Value="true">
+                    <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background}"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border}"/>
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="false">
+                    <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
+                    <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+    </Window.Resources>
     <Border Margin="10" BorderThickness="1" CornerRadius="15,15,15,15">
         <Border.Background>
-            <ImageBrush ImageSource="./Image/panel2.jpg"/>
+            <ImageBrush ImageSource="./Image/panel3.png"/>
         </Border.Background>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="0.3*"/>
+                <RowDefinition Height="0.25*"/>
                 <RowDefinition Height="1*"/>
-                <RowDefinition Height="0.3*"/>
+                <RowDefinition Height="0.25*"/>
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
@@ -23,14 +66,39 @@
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="0.5*"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" CornerRadius="25,25,25,25" Margin="10" Opacity="0.9" Background="White">
-                    <StackPanel Orientation="Horizontal"  HorizontalAlignment="Center" >
-                        <Button Margin="10" Width="50" Click="btn_Click" Background="White" BorderThickness="0" Content="前挡风" FontFamily="Microsoft YaHei" FontWeight="Bold"/>
-                        <Button Margin="10" Width="50" Opacity="0.2"/>
-                    </StackPanel>
+                <Border Grid.Column="0" Style="{StaticResource BorderStyle}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.3*"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="0.3*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="1" x:Name="FrontGlass" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
+                            <Image Source="./Image/FrontGlass.png" Opacity="0.8" Margin="10"/>
+                        </Button>
+                        <Button Grid.Column="2" x:Name="BackGlass" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
+                            <Image Source="./Image/BackGlass.png" Opacity="0.8" Margin="10"/>
+                        </Button>
+                    </Grid>
                 </Border>
-                <Border Grid.Column="1" CornerRadius="25,25,25,25" Margin="10" Opacity="0.9" Background="White"/>
-                <Border Grid.Column="2" CornerRadius="25,25,25,25" Margin="10" Opacity="0.9" Background="White"/>
+                <Border Grid.Column="1" Style="{StaticResource BorderStyle}"/>
+                <Border Grid.Column="2" Style="{StaticResource BorderStyle}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.3*"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="0.3*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="1" x:Name="OutCycle" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
+                            <Image Source="./Image/OutCycle.png" Opacity="0.8" Margin="10"/>
+                        </Button>
+                        <Button Grid.Column="2" x:Name="InnerCycle" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
+                            <Image Source="./Image/InnerCycle.png" Opacity="0.8" Margin="10"/>
+                        </Button>
+                    </Grid>
+                </Border>
             </Grid>
 
             <Grid Grid.Row="1">
@@ -39,8 +107,19 @@
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="0.25*"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" CornerRadius="25,25,25,25" Margin="10" Opacity="0.2" Background="White"/>
-                <Border Grid.Column="2" CornerRadius="25,25,25,25" Margin="10" Opacity="0.2" Background="White"/>
+                <Border Grid.Column="0" CornerRadius="25,160,160,25" Margin="30,30,30,30" Background="White" Opacity="0.8">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="0.7*"/>
+                            <RowDefinition/>
+                            <RowDefinition Height="0.7*"/>
+                        </Grid.RowDefinitions>
+                        <Button Grid.Row="0" Background="White" BorderThickness="0" Content="21.5" FontWeight="Bold" FontSize="40" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
+                        <Button Grid.Row="1" Background="White" BorderThickness="0" Content="21.0" FontWeight="Bold" FontSize="50" Margin="10"/>
+                        <Button Grid.Row="2" Background="White" BorderThickness="0" Content="20.5" FontWeight="Bold" FontSize="40" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    </Grid>
+                </Border>
+                <Border Grid.Column="2" CornerRadius="160,25,25,160" Margin="30" Opacity="0.2" Background="White"/>
             </Grid>
 
             <Grid Grid.Row="2">
@@ -49,9 +128,47 @@
                     <ColumnDefinition Width="0.9*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" CornerRadius="25,25,25,25" Margin="10" Opacity="0.9" Background="White"/>
-                <Border Grid.Column="1" CornerRadius="25,25,25,25" Margin="10" Opacity="0.9" Background="White"/>
-                <Border Grid.Column="2" CornerRadius="25,25,25,25" Margin="10" Opacity="0.9" Background="White"/>
+                <Border Grid.Column="0" Style="{StaticResource BorderStyle}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.3*"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="0.3*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="1" x:Name="windDirection0" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
+                            <Image Source="./Image/OutCycle.png" Opacity="0.8" Margin="10"/>
+                        </Button>
+                        <Button Grid.Column="2" x:Name="windDirection1" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
+                            <Image Source="./Image/InnerCycle.png" Opacity="0.8" Margin="10"/>
+                        </Button>
+                        <Button Grid.Column="3" x:Name="windDirection2" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
+                            <Image Source="./Image/InnerCycle.png" Opacity="0.8" Margin="10"/>
+                        </Button>
+                    </Grid>
+                </Border>
+                <Border Grid.Column="1" Style="{StaticResource BorderStyle}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.1*"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="1.5*"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="0.1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="1" x:Name="heatType0" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
+                            <Image Source="./Image/OutCycle.png" Opacity="0.8" Margin="10"/>
+                        </Button>
+                        <Button Grid.Column="2" x:Name="power" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
+                            <Image Source="./Image/InnerCycle.png" Opacity="0.8" Margin="10"/>
+                        </Button>
+                        <Button Grid.Column="3" x:Name="heatType1" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
+                            <Image Source="./Image/InnerCycle.png" Opacity="0.8" Margin="10"/>
+                        </Button>
+                    </Grid>
+                </Border>
+                <Border Grid.Column="2" Style="{StaticResource BorderStyle}"/>
             </Grid>
 
         </Grid>
