--- a/Software/CANController/MainWindow.xaml
+++ b/Software/CANController/MainWindow.xaml
@@ -18,9 +18,9 @@
             <Setter Property="Opacity" Value="0.85"/>
             <Setter Property="Background" Value="White"/>
         </Style>
-        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="White"/>
-        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
-        <SolidColorBrush x:Key="Button.Pressed.Background" Color="LightSkyBlue"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="LightSkyBlue"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="White"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="White"/>
         <SolidColorBrush x:Key="Button.Pressed.Border" Color="LightSkyBlue"/>
         <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
         <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
@@ -82,7 +82,36 @@
                         </Button>
                     </Grid>
                 </Border>
-                <Border Grid.Column="1" Style="{StaticResource BorderStyle}"/>
+                <Border Grid.Column="1" Style="{StaticResource BorderStyle}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="2*"/>
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Source="./Image/smallfan.png"/>
+                        <Image Grid.Column="11" Source="./Image/bigfan.png"/>
+                        <Button Grid.Column="1" Background="White" BorderThickness="3" Margin="12,50,12,15" BorderBrush="Black"/>
+                        <Button Grid.Column="2" Background="White" BorderThickness="3" Margin="12,45,12,15" BorderBrush="Black"/>
+                        <Button Grid.Column="3" Background="White" BorderThickness="3" Margin="12,40,12,15" BorderBrush="Black"/>
+                        <Button Grid.Column="4" Background="White" BorderThickness="3" Margin="12,35,12,15" BorderBrush="Black"/>
+                        <Button Grid.Column="5" Background="White" BorderThickness="3" Margin="12,30,12,15" BorderBrush="Black"/>
+                        <Button Grid.Column="6" Background="White" BorderThickness="3" Margin="12,25,12,15" BorderBrush="Black"/>
+                        <Button Grid.Column="7" Background="White" BorderThickness="3" Margin="12,20,12,15" BorderBrush="Black"/>
+                        <Button Grid.Column="8" Background="White" BorderThickness="3" Margin="12,15,12,15" BorderBrush="Black"/>
+                        <Button Grid.Column="9" Background="White" BorderThickness="3" Margin="12,10,12,15" BorderBrush="Black"/>
+                        <Button Grid.Column="10" Background="White" BorderThickness="3" Margin="12,5,12,15" BorderBrush="Black"/>
+                    </Grid>
+                </Border>
                 <Border Grid.Column="2" Style="{StaticResource BorderStyle}">
                     <Grid>
                         <Grid.ColumnDefinitions>
@@ -114,12 +143,23 @@
                             <RowDefinition/>
                             <RowDefinition Height="0.7*"/>
                         </Grid.RowDefinitions>
-                        <Button Grid.Row="0" Background="White" BorderThickness="0" Content="21.5" FontWeight="Bold" FontSize="40" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
-                        <Button Grid.Row="1" Background="White" BorderThickness="0" Content="21.0" FontWeight="Bold" FontSize="50" Margin="10"/>
-                        <Button Grid.Row="2" Background="White" BorderThickness="0" Content="20.5" FontWeight="Bold" FontSize="40" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                        <Button Template="{DynamicResource CarButtonTemplate}" Grid.Row="0" Background="White" BorderThickness="0" Content="21.5" FontSize="40" Margin="15" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontFamily="Bahnschrift SemiBold"/>
+                        <Button Template="{DynamicResource CarButtonTemplate}" Grid.Row="1" Background="White" BorderThickness="0" Content="21.0" FontSize="60" Margin="20" FontFamily="Bahnschrift SemiBold"/>
+                        <Button Template="{DynamicResource CarButtonTemplate}" Grid.Row="2" Background="White" BorderThickness="0" Content="20.5" FontSize="40" Margin="15" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bahnschrift SemiBold"/>
                     </Grid>
                 </Border>
-                <Border Grid.Column="2" CornerRadius="160,25,25,160" Margin="30" Opacity="0.2" Background="White"/>
+                <Border Grid.Column="2" CornerRadius="160,25,25,160" Margin="30" Opacity="0.8" Background="White">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="0.7*"/>
+                            <RowDefinition/>
+                            <RowDefinition Height="0.7*"/>
+                        </Grid.RowDefinitions>
+                        <Button Template="{DynamicResource CarButtonTemplate}" Grid.Row="0" Background="White" BorderThickness="0" Content="21.5" FontSize="40" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Bahnschrift SemiBold"/>
+                        <Button Template="{DynamicResource CarButtonTemplate}" Grid.Row="1" Background="White" BorderThickness="0" Content="21.0" FontSize="60" Margin="20" FontFamily="Bahnschrift SemiBold"/>
+                        <Button Template="{DynamicResource CarButtonTemplate}" Grid.Row="2" Background="White" BorderThickness="0" Content="20.5" FontSize="40" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Top" FontFamily="Bahnschrift SemiBold"/>
+                    </Grid>
+                </Border>
             </Grid>
 
             <Grid Grid.Row="2">
@@ -138,13 +178,13 @@
                             <ColumnDefinition Width="0.3*"/>
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="1" x:Name="windDirection0" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
-                            <Image Source="./Image/OutCycle.png" Opacity="0.8" Margin="10"/>
+                            <Image Source="./Image/up.png" Opacity="0.8" Margin="10"/>
                         </Button>
                         <Button Grid.Column="2" x:Name="windDirection1" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
-                            <Image Source="./Image/InnerCycle.png" Opacity="0.8" Margin="10"/>
+                            <Image Source="./Image/mid.png" Opacity="0.8" Margin="10"/>
                         </Button>
                         <Button Grid.Column="3" x:Name="windDirection2" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
-                            <Image Source="./Image/InnerCycle.png" Opacity="0.8" Margin="10"/>
+                            <Image Source="./Image/low.png" Opacity="0.8" Margin="10"/>
                         </Button>
                     </Grid>
                 </Border>
@@ -158,17 +198,51 @@
                             <ColumnDefinition Width="0.1*"/>
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="1" x:Name="heatType0" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
-                            <Image Source="./Image/OutCycle.png" Opacity="0.8" Margin="10"/>
+                            <Image Source="./Image/heat.png" Opacity="0.8" Margin="10"/>
                         </Button>
                         <Button Grid.Column="2" x:Name="power" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
-                            <Image Source="./Image/InnerCycle.png" Opacity="0.8" Margin="10"/>
+                            <Image Source="./Image/power.png" Opacity="0.8" Margin="3
+                                   "/>
                         </Button>
                         <Button Grid.Column="3" x:Name="heatType1" Template="{DynamicResource CarButtonTemplate}" Style="{StaticResource ButtonStyle}" Click="ButtonClick">
-                            <Image Source="./Image/InnerCycle.png" Opacity="0.8" Margin="10"/>
+                            <Image Source="./Image/cold.png" Opacity="0.8" Margin="10"/>
                         </Button>
                     </Grid>
                 </Border>
-                <Border Grid.Column="2" Style="{StaticResource BorderStyle}"/>
+                <Border Grid.Column="2" Style="{StaticResource BorderStyle}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.5*"/>
+                            <ColumnDefinition Width="0.6*"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Image Source="./Image/pm2.5.png" Margin="20" HorizontalAlignment="Right"></Image>
+                        <Grid Grid.Column="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <TextBlock Foreground="#FF456CB2" Grid.Row="0" VerticalAlignment="Bottom" HorizontalAlignment="Center" FontSize="25" FontWeight="Bold" FontFamily="Bahnschrift SemiBold">
+                                室外
+                            </TextBlock>
+                            <TextBlock Foreground="#FF456CB2" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="25" FontWeight="Bold" FontFamily="Bahnschrift SemiBold">
+                                室内
+                            </TextBlock>
+                        </Grid>
+                        <Grid Grid.Column="2">
+                            <Grid.RowDefinitions>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <TextBlock Foreground="#FF456CB2" Grid.Row="0" VerticalAlignment="Bottom" HorizontalAlignment="Left" FontSize="25" FontWeight="Bold" FontFamily="Bahnschrift SemiBold">
+                                125
+                            </TextBlock>
+                            <TextBlock Foreground="#FF456CB2" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="25" FontWeight="Bold" FontFamily="Bahnschrift SemiBold">
+                                50
+                            </TextBlock>
+                        </Grid>
+                    </Grid>
+                </Border>
             </Grid>
 
         </Grid>
