粗略完成CAN数据展示界面，完成CAN数据接收

--- a/Software/CANController/CanDetail.xaml
+++ b/Software/CANController/CanDetail.xaml
@@ -5,10 +5,135 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CANController"
         mc:Ignorable="d"
+        x:Name="CANInfo"
         Title="CanDetail" Height="450" Width="800">
     <Grid>
-        <TextBox x:Name="test">
-            
-        </TextBox>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.4*"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="0.2*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="0.4*"/>
+                    <RowDefinition Height="0.6*"/>
+                    <RowDefinition Height="0.4*"/>
+                    <RowDefinition Height="0.6*"/>
+                    <RowDefinition Height="0.6*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" TextAlignment="Center" FontWeight="Bold" FontSize="14" Background="LightGray">设备参数</TextBlock>
+                <Grid Grid.Row="1" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center">设备类型：</TextBlock>
+                    <TextBlock Grid.Column="2" TextAlignment="Center" VerticalAlignment="Center" >设备索引：</TextBlock>
+                    <TextBlock Grid.Column="4" TextAlignment="Center" VerticalAlignment="Center" >通道号：</TextBlock>
+                </Grid>
+                <TextBlock Grid.Row="2" TextAlignment="Center" FontWeight="Bold" FontSize="14" Background="LightGray">初始化CAN参数</TextBlock>
+                <Grid Grid.Row="3" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center">波特率：</TextBlock>
+                    <TextBlock Grid.Column="2" TextAlignment="Center" VerticalAlignment="Center" >验收码：</TextBlock>
+                    <TextBox Grid.Column="3" Margin="10,3"></TextBox>
+                    <TextBlock Grid.Column="4" TextAlignment="Center" VerticalAlignment="Center" >滤波方式：</TextBlock>
+                </Grid>
+                <Grid Grid.Row="4" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center">模式：</TextBlock>
+                    <TextBlock Grid.Column="2" TextAlignment="Center" VerticalAlignment="Center" >屏蔽码：</TextBlock>
+                    <TextBox Grid.Column="3" Margin="10,3"></TextBox>
+                </Grid>
+            </Grid>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Button Grid.Row="0" Margin="20,10">
+                    <TextBlock>连接</TextBlock>
+                </Button>
+                <Button Grid.Row="1" Margin="20,10">
+                    <TextBlock>启动</TextBlock>
+                </Button>
+            </Grid>
+        </Grid>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.5*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1.1*"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" TextAlignment="Center" FontWeight="Bold" FontSize="14" Background="LightGray" VerticalAlignment="Center">发送数据帧</TextBlock>
+            <Grid Grid.Row="1" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center">发送格式：</TextBlock>
+                <TextBlock Grid.Column="2" TextAlignment="Center" VerticalAlignment="Center" >帧格式：</TextBlock>
+                <TextBlock Grid.Column="4" TextAlignment="Center" VerticalAlignment="Center" >帧类型：</TextBlock>
+                <Button Grid.Column="6" Margin="30,5">
+                    <TextBlock>发送</TextBlock>
+                </Button>
+            </Grid>
+            <Grid Grid.Row="2" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="0.7*"/>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="1.5*"/>
+                    <ColumnDefinition Width="0.6*"/>
+                    <ColumnDefinition Width="0.4*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" TextAlignment="Right" VerticalAlignment="Center">帧ID：</TextBlock>
+                <TextBox Grid.Column="1" Margin="10"></TextBox>
+                <TextBlock Grid.Column="2" TextAlignment="Right" VerticalAlignment="Center" >数据：</TextBlock>
+                <TextBox Grid.Column="3" Margin="10"></TextBox>
+                <TextBlock Grid.Column="4" TextAlignment="Right" VerticalAlignment="Center" >一次发送的帧数：</TextBlock>
+                <TextBox Grid.Column="5" Margin="10"></TextBox>
+            </Grid>
+        </Grid>
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.13*"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" TextAlignment="Center" FontWeight="Bold" FontSize="14" Background="LightGray" VerticalAlignment="Center">信息</TextBlock>
+            <ScrollViewer Grid.Row="1">
+                <TextBlock x:Name="test" Text ="{Binding CurrentProgress, ElementName=CANInfo, Mode=OneWay}">
+
+                </TextBlock>
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </Window>
