--- a/Software/CANController/CanDetail.xaml
+++ b/Software/CANController/CanDetail.xaml
@@ -125,11 +125,11 @@
                     <ColumnDefinition Width="0.4*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center">帧ID：</TextBlock>
-                <TextBox Grid.Column="1" Margin="10,8"></TextBox>
+                <TextBox Grid.Column="1" Margin="10,8" Name="FrameID"></TextBox>
                 <TextBlock Grid.Column="2" TextAlignment="Center" VerticalAlignment="Center" >数据：</TextBlock>
-                <TextBox Grid.Column="3" Margin="10,8"></TextBox>
+                <TextBox Grid.Column="3" Margin="10,8" Name="FrameData"></TextBox>
                 <TextBlock Grid.Column="4" TextAlignment="Center" VerticalAlignment="Center" >一次发送的帧数：</TextBlock>
-                <TextBox Grid.Column="5" Margin="10,8"></TextBox>
+                <TextBox Grid.Column="5" Margin="10,8" Name="FrameNumber"></TextBox>
             </Grid>
         </Grid>
         <Grid Grid.Row="2">
